--- a/_slides/04-CPS50.md
+++ b/_slides/04-CPS50.md
@@ -3,7 +3,7 @@ layout: slide
 title: "Welcome to our slide deck!"
 ---
 
-Caption here
+Is that me!
 
 ![Robotocat](https://octodex.github.com/images/Robotocat.png)
 {: .center}
